--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "next": "latest",
     "next-themes": "^0.4.6",
     "nspell": "^2.1.5",
+    "openai": "^5.5.0",
     "postgres": "^3.4.7",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
